# activity_manager_sys-mobile

./: settings.gradle
app/: build.gradle
app/src/main/: AndroidManifest.xml
app/src/main/res/drawable/: bg_radius.xml  bg_radius_gray.xml  bt_radius.xml  button_bg_selector.xml  circle.xml  circle_finish.xml  circle_ing.xml  circle_label.xml  circle_not_begin.xml  dialog_fragment_bg_radius.xml  icon_popup_finish.xml  item_bg_radius.xml  line.xml  test_bg_in.xml  test_bg_in_attend.xml  test_bg_out.xml
app/src/main/res/layout/: activity_face_collect.xml  activity_index.xml  activity_login.xml  activity_register.xml  activity_self_attend.xml  activity_test.xml  activity_video_attend.xml  bage_hint.xml  dialog_act_detail.xml  dialog_date_picker.xml  dialog_join_act.xml  dialog_loading.xml  empty_view_attend.xml  empty_view_create_act.xml  empty_view_join_act.xml  fragment_act.xml  fragment_act_center.xml  fragment_act_detail.xml  fragment_attend_center.xml  fragment_create_act.xml  fragment_create_attend.xml  fragment_edit_attend_time.xml  fragment_edit_attend_type.xml  fragment_error.xml  fragment_index.xml  (+10 more)
facerecognize/: CMakeLists.txt  build.gradle
facerecognize/src/androidTest/java/com/aqinn/facerecognizencnn/facerecognize/: ExampleInstrumentedTest.java
facerecognize/src/main/: AndroidManifest.xml
facerecognize/src/main/assets/: litepal.xml
facerecognize/src/main/cpp/: face_jni.cpp
facerecognize/src/main/java/com/aqinn/facerecognizencnn/: FaceRecognize.java
facerecognize/src/test/java/com/aqinn/facerecognizencnn/facerecognize/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
(+167 files in other folders)
